--- a/dada/DADA/Template/templates/default_list_template.tmpl
+++ b/dada/DADA/Template/templates/default_list_template.tmpl
@@ -52,9 +52,9 @@
 		<!-- tmpl_if subscribed_to_list --> 
 		
 			<div class="positive_greeting">
-				<h1 style="text-align:center">
+				<p style="text-align:center" class="positive">
 					You are currently subscribed to, <!-- tmpl_var list_settings.list_name -->!
-				</h1> 
+				</p> 
 			</div> 
 		<!-- tmpl_else --> 
 			<!-- <h1>You are not subscribed to this list.</h1> -->
