--- a/dada/DADA/Template/templates/profile_reset_password_confirm.tmpl
+++ b/dada/DADA/Template/templates/profile_reset_password_confirm.tmpl
@@ -5,7 +5,7 @@
 </h1>
 
 <p>
-	Please check your email inbox for <!-- tmpl_var profile.email --> for the profile password confirmation message. 
+	Please check your email inbox for, <!-- tmpl_var profile.email --> for the profile password confirmation message. 
 </p>
 
 <p>
