--- a/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
@@ -51,16 +51,16 @@
 
 </fieldset> 
 
+<!-- tmpl_if comment --> 
 <!-- tmpl_if log_viewer_plugin_url --> 
 
     <p style="font-weight:bold;">
      <a href="#"onClick="external(['process__search','query__<!-- tmpl_var email escape=HTML -->', 'only_content__1','NO_CACHE'], ['log_search_results']); ">
      <!-- tmpl_var email escape=HTML -->'s Raw Logs Below:
      </a>
-     </p>
-     
+     </p>     
      
 <div id="log_search_results" style="border:1px solid black;padding:5px"></div> 
-
+<!-- /tmpl_if --> 
 <!-- /tmpl_if --> 
 <!-- end edit_subscribed_screen.tmpl -->
