--- a/dada/DADA/Template/templates/profile_home.tmpl
+++ b/dada/DADA/Template/templates/profile_home.tmpl
@@ -189,7 +189,7 @@ Your Mailing List Subscriptions
 
 <hr /> 
 
-<!-- 
+<!-- tmpl_if comment --> 
 	
 <fieldset> 
 	
@@ -231,7 +231,7 @@ Your Mailing List Subscriptions
 
 </fieldset>
 
---> 
+<!-- /tmpl_if --> 
 
 
 
