--- a/dada/DADA/Template/templates/smtp_options_screen.tmpl
+++ b/dada/DADA/Template/templates/smtp_options_screen.tmpl
@@ -349,58 +349,46 @@ Checking this option may dramatically increase sending speed, since the actual c
 
 </fieldset>
 
-
-
-
-<!-- 
-<p>
- <input type="button" name="foo" id="foo" value="Save and Test SMTP Settings..." class="processing" onClick="ajax_save_smtp_options(['flavor', 'process', 'use_pop_before_smtp', 'set_smtp_sender', 'smtp_server', 'pop3_server', 'pop3_username', 'pop3_password', 'use_smtp_ssl', 'use_sasl_smtp_auth', 'sasl_auth_mechanism', 'sasl_smtp_username', 'sasl_smtp_password', 'smtp_port', 'no_redirect__1'], []); smtp_test_results(['flavor'], ['smtp_test_results'])" /> 
-</p>
---> 
-
-
 <input type="hidden" name="process" id="process" value="1" /> 
-
-<!--
-						sasl_auth_mechanism:   $F('sasl_auth_mechanism'), 
-		sasl_smtp_username:    $F('sasl_smtp_username'), 
-	sasl_smtp_password:    $F('sasl_smtp_password'), 
-	smtp_port:             $F('smtp_port'),
-	
--->
 
 <script type="text/javascript">
     //<![CDATA[
 
-	 function foosmtp(){ 
+	 function test_smtp(){ 
 		new Ajax.Updater(
 			'smtp_test_results', '<!-- tmpl_var S_PROGRAM_URL -->', 
 			{ 
-			    method: 'get', 
+			    method: 'post', 
 				parameters: {
-					f: 'smtp_test_results',
-					process:               $F('process'),
-					use_pop_before_smtp:   $F('use_pop_before_smtp'), 
-					set_smtp_sender:       $F('set_smtp_sender'), 
-					smtp_server:           $F('smtp_server'), 
-					pop3_server:           $F('pop3_server'), 
-					pop3_username:         $F('pop3_username'), 
-					pop3_password:         $F('pop3_password'), 
-					use_smtp_ssl:          $F('use_smtp_ssl'),			
-					use_sasl_smtp_auth:    $F('use_sasl_smtp_auth'), 
-					sasl_auth_mechanism:   $F('sasl_auth_mechanism'), 
-					sasl_smtp_username:    $F('sasl_smtp_username'), 
-					sasl_smtp_password:    $F('sasl_smtp_password'), 
-					smtp_port:             $F('smtp_port'),
+					smtp_server:               $F('smtp_server'), 
+					smtp_port:                 $F('smtp_port'),
+					use_smtp_ssl:              $F('use_smtp_ssl'),			
+					use_sasl_smtp_auth:        $F('use_sasl_smtp_auth'), 
+					sasl_auth_mechanism:       $F('sasl_auth_mechanism'), 
+					sasl_smtp_username:        $F('sasl_smtp_username'), 
+					sasl_smtp_password:        $F('sasl_smtp_password'), 
+					use_pop_before_smtp:       $F('use_pop_before_smtp'), 
+					pop3_server:               $F('pop3_server'), 
+					pop3_username:             $F('pop3_username'), 
+					pop3_password:             $F('pop3_password'), 
+					pop3_auth_mode:            $F('pop3_auth_mode'),
+					pop3_use_ssl:              $F('pop3_use_ssl'), 
+					set_smtp_sender:           $F('set_smtp_sender'), 
+					smtp_connection_per_batch: $F('smtp_connection_per_batch'), 
+					
+					process:                   $F('process'),
+					f:                         'smtp_test_results',
+				
 					},
 					
 			onCreate: 	 function() {
-				
+				$('smtp_test_results').hide(); 
 				$('smtp_test_results_loading').show();
 
 			},
 			onComplete: 	 function() {
 				
+				$('smtp_test_results').show(); 
 				$('smtp_test_results_loading').hide();
 
 			}
@@ -412,7 +400,7 @@ Checking this option may dramatically increase sending speed, since the actual c
 </script>
 
 <p>
-	<input type="button"  value="Save and Test SMTP Settings..." class="processing" onClick="foosmtp();" /> 
+	<input type="button"  value="Save and Test SMTP Settings..." class="processing" onClick="test_smtp();" /> 
 </p> 
  
 <div id="smtp_test_results_loading" style="display:none">
