--- a/dada/DADA/Template/templates/profile_home.tmpl
+++ b/dada/DADA/Template/templates/profile_home.tmpl
@@ -1,6 +1,33 @@
 <!-- begin profile_home.tmpl --> 
 
 
+<script> 
+function toggleDisplay(target) {
+	if (document.getElementById){
+		var togglin = document.getElementById( target );
+		if(togglin.style.display == ""){
+			togglin.style.display = "none";
+		}else{
+			togglin.style.display = "";
+		}
+	}
+}
+
+function confirm_profile_removal(form_name) {
+		
+	
+	var confirm_msg =  "Are you sure you want to ";
+	    confirm_msg += " remove this profile?";
+	    confirm_msg += " This profile removal cannot be undone.";
+	if(!confirm(confirm_msg)){
+		alert('Profile not removed.');
+		return false;
+	}	
+}
+
+
+
+</script> 
 
 <p style="text-align:right"> 
 	[ <a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_logout">Logout</a>]
@@ -189,25 +216,42 @@ Your Mailing List Subscriptions
 
 <hr /> 
 
-<!-- tmpl_if comment --> 
+
 	
 <fieldset> 
-	
-<legend>
-	Update Your Email Address
-</legend> 
+	<legend> 
+	    <a href="#" onclick="toggleDisplay('update_profile_email');return false;">+/-</a>Update Your Profile Email Address
+	   </legend>
+
+
+	<div id="update_profile_email" style="display:none">
+
+
 
 <p class="positive">
-	Subscriptions using your current email address (<!-- tmpl_var profile.email -->) will be replaced with 
- 	this new email address: 
+	The Profile Email Address and Subscriptions using your current email address (<!-- tmpl_var profile.email -->) 
+	will be replaced with this new email address, where it's allowed: 
 </p>
 
-<!-- tmpl_if errors_update_email_invalid --> 
+<!-- tmpl_if errors_update_email --> 
 
-	<p class="error"> 
-		The email address you submitted is not valid.
-	</p> 
+	<!-- tmpl_if error_invalid_email --> 
+		<p class="error"> 
+			The email address you submitted is not valid.
+		</p> 
+	<!-- /tmpl_if --> 
 	
+	<!-- tmpl_if error_profile_exists --> 
+
+		<p class="error"> 
+			A Profile already exists for the email address, <!-- tmpl_var updated_email -->.
+		</p> 
+
+	<!-- /tmpl_if --> 
+
+	
+<!-- tmpl_else --> 
+
 <!-- /tmpl_if --> 
 
 <form action="<!-- tmpl_var PROGRAM_URL -->" method="post"> 
@@ -215,33 +259,36 @@ Your Mailing List Subscriptions
 	<input type="hidden" name="process"  value="update_email" />
 	
 	  <p>
-        <label for="password" style="width: 10em;float: left;text-align: right;margin-right: 0.5em;display: block">
-        Your New Email Address: 
+        <label for="updated_email" style="width: 10em;float: left;text-align: right;margin-right: 0.5em;display: block">
+        Your New Profile Email Address: 
         </label>
-        <input type="text" name="email" id="email" value=""  />
+        <input type="text" name="updated_email" id="updated_email" value=""  />
         </p>
 
 	<div class="buttonfloat">	
-    <input type="submit" value="Confirm and Update New Email Address" /> 
+    <input type="submit" value="Confirm and Update Your New Profile Email Address" /> 
 	</div>
 	<div class="floatclear"></div>
 
 
 </form>
+</div> 
 
 </fieldset>
 
-<!-- /tmpl_if --> 
+
 
 
 
 
 <fieldset> 
 	
-<legend>
-Change Your Profile Password
-</legend> 
-
+<legend> 
+    <a href="#" onclick="toggleDisplay('change_profile_password');return false;">+/-</a> Change Your Profile Password
+   </legend>
+     
+		
+<div id="change_profile_password" style="display:none">
 
 <form action="<!-- tmpl_var PROGRAM_URL -->" method="post"> 
 	<input type="hidden" name="f"        value="profile" /> 
@@ -269,7 +316,46 @@ Change Your Profile Password
 
 </form>
 
+</div> 
+
 </fieldset> 
+
+
+
+
+
+<fieldset> 
+
+   <legend>
+    <a href="#" onclick="toggleDisplay('delete_profile');return false;">+/-</a> Delete This Profile
+   </legend>
+     
+		
+<div id="delete_profile" style="display:none">
+	
+	
+	
+<form action="<!-- tmpl_var PROGRAM_URL -->" method="post"> 
+	<input type="hidden" name="f"        value="profile" /> 
+	<input type="hidden" name="process"  value="delete_profile" />
+	
+	<p>
+		Deleting your profile will remove all your profile information, but 
+		all your subscriptions to subscribed mailing lists will remain.
+	</p> 
+	
+	<div class="buttonfloat">	
+    <input type="submit" value="Delete Your Profile" class="alertive" onclick="return confirm_profile_removal(this.form);" /> 
+	</div>
+	<div class="floatclear"></div>
+
+
+</form>
+
+</div> 
+	
+</fieldset>
+
 
 
 
