Added a message if you've removed a profile.

--- a/dada/DADA/Template/templates/profile_login.tmpl
+++ b/dada/DADA/Template/templates/profile_login.tmpl
@@ -8,6 +8,11 @@
 	</a> 
 </p>
 
+<!-- tmpl_if removal --> 
+	<p class="positive"> 
+		Your profile has been removed.
+	</p> 
+<!-- /tmpl_if --> 
 
 <!-- tmpl_if welcome --> 
 	<p class="positive">
