Added the ultiple_list_sending_widget.tmpl widget.

--- a/dada/DADA/Template/templates/send_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_email_screen.tmpl
@@ -88,7 +88,10 @@
 
 <!-- tmpl_include send_email_archive_options_widget.tmpl -->
 
+<!-- tmpl_include multiple_list_sending_widget.tmpl --> 
+
 <!-- tmpl_include partial_sending_options_widget.tmpl --> 
+
 
 <fieldset> 
 
