Added a, "List" column.

--- a/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
@@ -43,6 +43,15 @@ Current Mass Mailings:
     <table cellpadding="2" cellspacing="0" border="0" width="100%">
      <tr> 
 	
+	
+	      <td> 
+	      <p>
+	       <strong> 
+	        List:
+	       </strong> 
+	      </p>
+	     </td>
+	
       <td> 
       <p>
        <strong> 
@@ -109,6 +118,14 @@ Current Mass Mailings:
     
     	<tr style="<!-- tmpl_if integrity_check --> <!-- tmpl_if __odd__ -->background-color:#ccf;<!--/tmpl_if--><!-- tmpl_else -->style=background-color:#cc3<!-- /tmpl_if -->">
 
+		      <td> 
+		      <p>
+		       <strong> 
+		        <!-- tmpl_var list --> 
+		       </strong> 
+		      </p>
+		     </td>
+		
          <td>  
           <p>
             <!-- tmpl_if Subject --> 
