Cleanup of code, as well as a start of tests for the multiple list sending stuff - looks great so far!

--- a/dada/DADA/Template/templates/default_css.css
+++ b/dada/DADA/Template/templates/default_css.css
@@ -3,7 +3,8 @@
 
 body { 
 	background-color:#fff;
-	font-family:Georgia,Times,'Times New Roman',serif;
+	/*font-family:Georgia,Times,'Times New Roman',serif;*/
+	font-family:helvetic,arial,san-serif;
 
 	line-height:1.50em;
 	
