--- a/dada/DADA/Template/templates/send_url_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_url_email_screen.tmpl
@@ -284,13 +284,13 @@
 			 
 		<!--/tmpl_if-->
 		 
-		 
+		 <!-- tmpl_include multiple_list_sending_widget.tmpl --> 
+		
 		 <!-- tmpl_include partial_sending_options_widget.tmpl --> 
 
          <!-- tmpl_include subscriber_field_tags_listing_widget.tmpl --> 
 
-
-		 <!-- tmpl_include name="send_a_list_message_button_widget.tmpl" -->
+		 <!-- tmpl_include send_a_list_message_button_widget.tmpl -->
 		 
 	<!-- /tmpl_unless -->
  
