--- a/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
@@ -272,8 +272,8 @@ Current Mass Mailings:
 
 <p style="font-weight:bold;">
  <a href="#" onclick="toggleDisplay('verbose_sending_information');return false;">
- Show/Hide Verbose Sending Information...
- </a>
+ +/- 
+ </a>Verbose Sending Information...
 </p>
 
 <div id="verbose_sending_information" style="display:none">
