More tests and more clarification.

--- a/dada/DADA/Template/templates/view_list_table_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_table_widget.tmpl
@@ -73,7 +73,7 @@
 	     <p>
 		
 	     <!-- tmpl_unless no_email_links --> 
-	 	<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=edit_subscriber&amp;email=<!-- tmpl_var email -->&amp;type=<!-- tmpl_var list_type -->" >
+	 	<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=edit_subscriber&amp;email=<!-- tmpl_var email -->&amp;type=<!-- tmpl_var type -->" >
 	       <!-- tmpl_var email -->  
 	      </a>
 	    <!-- tmpl_else --> 
